crates/ruma-common/tests/events/ui/08-enum-invalid-path.stderr
error: well-known matrix events have to start with `m.` found `not.a.path`
  --> tests/events/ui/08-enum-invalid-path.rs:11:9
   |
11 |         "not.a.path",
   |         ^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `not` in `events`
 --> tests/events/ui/08-enum-invalid-path.rs:5:9
  |
5 |         "m.not.a.path",
  |         ^^^^^^^^^^^^^^ could not find `not` in `events`
